[package]
name = "kdevelop"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
k8s-openapi = { version = "0.13.1", features = ["v1_22"] }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
yaml-rust = "0.4.5"