[package]
name = "kdevelop"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
yaml-rust = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"